--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ a {
 
 /* Links in p tags should be green */
 p a {
-  @apply text-green-400 font-semibold;
+  @apply text-blue-400 font-semibold;
 }
 
 /* Reduce b and strong tag weight default */
